--- a/examples/test1-compose.yaml
+++ b/examples/test1-compose.yaml
@@ -16,7 +16,7 @@
 version: "2.4"
 services:
   network:
-    build: {context: .}
+    build: {context: ../}
     image: conlink
     pid: host
     network_mode: none
