--- a/examples/test2-compose.yaml
+++ b/examples/test2-compose.yaml
@@ -7,7 +7,7 @@ version: "2.4"
 
 services:
   network:
-    build: {context: .}
+    build: {context: ../}
     image: conlink
     pid: host
     network_mode: none
