Support usage outside of docker-compose.
The primary change is to move the mapping of container names out of the
core functions and only do it during top-level configuration loading and
configuration mangling. The parameterize the compose specific loading
to only happen if the new --compose-file flag is given.

Add third example that demonstrates launching a standalone conlink
network container that connects to a pre-existing docker container.

--- a/examples/test2-compose.yaml
+++ b/examples/test2-compose.yaml
@@ -17,7 +17,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker:/var/lib/docker
       - ./:/test
-    command: /sbin/conlink.py /test/test2-compose.yaml --network-file /test/test2-network.yaml
+    command: /sbin/conlink.py --compose-file /test/test2-compose.yaml --network-file /test/test2-network.yaml
 
   node1:
     image: alpine
