Add env var support for non-compose network config.
All environment variables within the network file must be defined in the
environment or all the config will fail to load.

--- a/examples/test3-network.yaml
+++ b/examples/test3-network.yaml
@@ -1,12 +1,12 @@
 # "Physical" network interface definitions.
 # This defines container to container links.
 links:
-  - left:  {container: ZZZ_node,    intf: ext-intf,  ip: 10.0.1.1/16}
-    right: {container: ZZZ_conlink, intf: node-intf}
+  - left:  {container: '${NODE_NAME}',     intf: ext-intf,  ip: 10.0.1.1/16}
+    right: {container: '${NETWORK_NAME}',  intf: node-intf}
 
 # Commands to run in containers after they are connected
 commands:
-  - container: ZZZ_node
+  - container: '${NODE_NAME}'
     command:
       - sh -c 'ip route | grep -qs default && ip route del default'
       - ip route add default via 10.0.0.1
