README: Capability info. examples: add NET_BROADCAST
For services/containers that use systemd, they will use NET_BROADCAST.
In order for the network namespace of those containers to be
managed/modified, conlink will need the same level of network cap
permissions.

--- a/examples/test2-compose.yaml
+++ b/examples/test2-compose.yaml
@@ -11,7 +11,7 @@ services:
     image: conlink
     pid: host
     network_mode: none
-    cap_add: [SYS_ADMIN, SYS_NICE, NET_ADMIN]
+    cap_add: [SYS_ADMIN, SYS_NICE, NET_ADMIN, NET_BROADCAST]
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
       - /var/run/docker.sock:/var/run/docker.sock
