Add IPC_LOCK capability for conlink.
On some configurations (kernel 5.4.0 among other things), IPC_LOCK is
needed for ovs-vswitchd to be able to create pthreads.

--- a/examples/test1-compose.yaml
+++ b/examples/test1-compose.yaml
@@ -20,7 +20,7 @@ services:
     image: conlink
     pid: host
     network_mode: none
-    cap_add: [SYS_ADMIN, SYS_NICE, NET_ADMIN, NET_BROADCAST]
+    cap_add: [SYS_ADMIN, NET_ADMIN, SYS_NICE, NET_BROADCAST, IPC_LOCK]
     security_opt: [ 'apparmor:unconfined' ] # needed on Ubuntu 18.04
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
