Env var interpolation with defaults (like docker-compose)
Import the docker-compose interpolation.py file
(https://github.com/docker/compose/blob/9f2fd6f3584c8028875c3118131aa5a490f3b9d9/compose/config/interpolation.py)
which provides the TemplateWithDefaults class which extends
string.Template to support default value syntax `${FOO:-val}` and
required value syntax `${FOO:?my custom error}` (error if not
specified).

Update example test2 to use a variable with default values for the name
of the 8.8.8.8 interface.

--- a/examples/test2-network.yaml
+++ b/examples/test2-network.yaml
@@ -37,6 +37,6 @@ mininet-cfg:
     - node: internet
       sync: true
       command:
-        - ip link add gdns type dummy
-        - ip link set gdns up
-        - ip addr add 8.8.8.8/24 dev gdns
+        - ip link add ${DNS_INTF:-gdns} type dummy
+        - ip link set ${DNS_INTF:-gdns} up
+        - ip addr add 8.8.8.8/24 dev ${DNS_INTF:-gdns}
