Add env var interpolation in inline network config.
Previously, variables in the main compose file configuration would be
interpolation by docker-compose but those same variables in the inline
section would not be interpolation by conlink. This now allows
interpolation (in docker-compose style with default values and require
values syntax) in the whole compose file including the inline conlink
configuration.

Update test1 to include environment variables for the last octet of each
host's IP address (with a default of "100" for all three of them).

--- a/examples/test1-compose.yaml
+++ b/examples/test1-compose.yaml
@@ -37,11 +37,11 @@ services:
           - name: r0
             opts: {ip: "192.168.1.1/24"}
           - name: h1
-            opts: {ip: "192.168.1.100/24", defaultRoute: "via 192.168.1.1"}
+            opts: {ip: "192.168.1.${H1_INDEX:-100}/24", defaultRoute: "via 192.168.1.1"}
           - name: h2
-            opts: {ip: "172.16.0.100/12",  defaultRoute: "via 172.16.0.1"}
+            opts: {ip: "172.16.0.${H2_INDEX:-100}/12",  defaultRoute: "via 172.16.0.1"}
           - name: h3
-            opts: {ip: "10.0.0.100/8",     defaultRoute: "via 10.0.0.1"}
+            opts: {ip: "10.0.0.${H3_INDEX:-100}/8",     defaultRoute: "via 10.0.0.1"}
         links:
           - left:  s1
             right: r0
