--- a/examples/test1-compose.yaml
+++ b/examples/test1-compose.yaml
@@ -1,7 +1,3 @@
-# A docker-compose file with inline network configuration and no
-# additional docker containers. The network container will be
-# configured with the following mininet configuration:
-#
 # Test Topology:
 #
 #       r0
@@ -14,7 +10,31 @@
 #
 
 version: "2.4"
+
+x-network:
+  links:
+    #- {domain: s1, service: h1, interface: eth0, ip: "192.168.1.${H1_INDEX:-100}/24", route: "0.0.0.0/0 via 192.168.1.1"}
+    #- {domain: s2, service: h2, interface: eth0, ip: "172.16.0.${H2_INDEX:-100}/12",  route: "0.0.0.0/0 via 172.16.0.1"}
+    #- {domain: s3, service: h3, interface: eth0, ip: "10.0.0.${H3_INDEX:-100}/8",     route: "0.0.0.0/0 via 10.0.0.1"}
+    - {domain: s1, service: h1, interface: eth0, ip: "192.168.1.100/24", route: "0.0.0.0/0 via 192.168.1.1"}
+    - {domain: s2, service: h2, interface: eth0, ip: "172.16.0.100/12",  route: "0.0.0.0/0 via 172.16.0.1"}
+    - {domain: s3, service: h3, interface: eth0, ip: "10.0.0.100/8",     route: "0.0.0.0/0 via 10.0.0.1"}
+
 services:
+  r0:
+    image: alpine
+    network_mode: none
+    command: "sleep 864000"
+    x-network:
+      links:
+        - {domain: s1, service: r0, interface: eth-s1, ip: "192.168.1.1/24"}
+        - {domain: s2, service: r0, interface: eth-s2, ip: "172.16.0.1/12"}
+        - {domain: s3, service: r0, interface: eth-s3, ip: "10.0.0.1/8"}
+
+  h1: {image: alpine, network_mode: none, command: "sleep 864000"}
+  h2: {image: alpine, network_mode: none, command: "sleep 864000"}
+  h3: {image: alpine, network_mode: none, command: "sleep 864000"}
+
   network:
     build: {context: ../}
     image: conlink
@@ -26,45 +46,4 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker:/var/lib/docker
       - ./:/test
-    command: /sbin/conlink --compose-file /test/test1-compose.yaml
-    x-network:
-      mininet-cfg:
-        switches:
-          - name: s1
-          - name: s2
-          - name: s3
-        hosts:
-          - name: r0
-            opts: {ip: "192.168.1.1/24"}
-          - name: h1
-            opts: {ip: "192.168.1.${H1_INDEX:-100}/24", defaultRoute: "via 192.168.1.1"}
-          - name: h2
-            opts: {ip: "172.16.0.${H2_INDEX:-100}/12",  defaultRoute: "via 172.16.0.1"}
-          - name: h3
-            opts: {ip: "10.0.0.${H3_INDEX:-100}/8",     defaultRoute: "via 10.0.0.1"}
-        links:
-          - left:  s1
-            right: r0
-            opts:  {intfName2: "r0-eth1", params2: {ip: "192.168.1.1/24"}}
-          - left:  s2
-            right: r0
-            opts:  {intfName2: "r0-eth2", params2: {ip: "172.16.0.1/12"}}
-          - left:  s3
-            right: r0
-            opts:  {intfName2: "r0-eth3", params2: {ip: "10.0.0.1/8"}}
-          - left:  h1
-            right: s1
-          - left:  h2
-            right: s2
-          - left:  h3
-            right: s3
-        commands:
-          - node: r0
-            command: "sysctl net.ipv4.ip_forward=1"
-          - node: h1
-            command: "python2 -m SimpleHTTPServer 81"
-          - node: h2
-            command: "python2 -m SimpleHTTPServer 82"
-          - node: h3
-            command: "python2 -m SimpleHTTPServer 83"
-
+    command: /app/build/conlink.js inner --compose-file /test/test1-compose.yaml
