--- a/examples/test2-compose.yaml
+++ b/examples/test2-compose.yaml
@@ -30,3 +30,9 @@ services:
     cap_add: [NET_ADMIN]
     network_mode: none
     command: sh -c 'while ! ip link show eth0 up; do sleep 1; done; sleep 864000'
+
+  internet:
+    image: alpine
+    cap_add: [NET_ADMIN]
+    network_mode: none
+    command: sleep 864000
