--- a/examples/test2-compose.yaml
+++ b/examples/test2-compose.yaml
@@ -1,7 +1,7 @@
 # A docker-compose file with an external network configuration file
-# and two docker containers that are connected via a switch. In
-# addition an "internet" host is setup in the network container that
-# is also connected to the switch and is listening on 8.8.8.8.
+# and docker containers that are connected via a switch. The
+# "internet" container is setup that is also connected to the switch
+# and is listening on 8.8.8.8 (to test routing from the nodes).
 
 version: "2.4"
 
@@ -19,20 +19,13 @@ services:
       - ./:/test
     command: /app/build/conlink.js inner --verbose --compose-file /test/test2-compose.yaml --network-file /test/test2-network.yaml
 
-  node1:
+  node:
     image: alpine
-    cap_add: [NET_ADMIN]
     network_mode: none
+    scale: 2
     command: sleep 864000
-
-  node2:
-    image: alpine
-    cap_add: [NET_ADMIN]
-    network_mode: none
-    command: sh -c 'while ! ip link show eth0 up; do sleep 1; done; sleep 864000'
 
   internet:
     image: alpine
-    cap_add: [NET_ADMIN]
     network_mode: none
     command: sleep 864000
