Refactor: generic links/intfs: *vlan, dummy, etc.
To support this, add link-{add,del}.sh scripts. These can basically be
thought of as wrappers/interfaces around iproute2 that have more
natural/detault netns support and have more programmatic command
arguments/calling convention.

- link-add.sh: support generic link types with namespacing support. Most
  of the the link configuration code is common between different link
  types so there is just a little bit of conditionalizing for veth and
  *vlan interface types.
- link-del.sh: sibling that is fairly simple link delete interface.

Refactor the network config syntax:
- add a 'type' field (that defaults to veth) and basically is the 'type'
  value for iproute2 commands.
- rename field 'domain' -> 'bridge': more accurate/precise
- rename 'interface' -> 'dev': more concise and aligned with iproute2
- add 'outer-dev' option for *vlan types source interface (the internal
  'outer-interface' field for veth interfaces is renamed to this too)
- add 'base' value that is mostly internal for now indicating where the
  other end of veth links and *vlan interfaces should be located.

Refactor conlink.core to support general interfaces and the new network
config syntax. Add support for '*vlan/*vtap' type interfaces which
really just means some additional checks and some default code for the
base and mtu values.

--- a/examples/test1-compose.yaml
+++ b/examples/test1-compose.yaml
@@ -13,9 +13,9 @@ version: "2.4"
 
 x-network:
   links:
-    - {domain: s1, service: h1, interface: eth0, ip: "192.168.1.${H1_INDEX:-100}/24", route: "0.0.0.0/0 via 192.168.1.1"}
-    - {domain: s2, service: h2, interface: eth0, ip: "172.16.0.${H2_INDEX:-100}/12",  route: "0.0.0.0/0 via 172.16.0.1"}
-    - {domain: s3, service: h3, interface: eth0, ip: "10.0.0.${H3_INDEX:-100}/8",     route: "0.0.0.0/0 via 10.0.0.1"}
+    - {bridge: s1, service: h1, ip: "192.168.1.${H1_INDEX:-100}/24", route: "default via 192.168.1.1"}
+    - {bridge: s2, service: h2, ip: "172.16.0.${H2_INDEX:-100}/12",  route: "default via 172.16.0.1"}
+    - {bridge: s3, service: h3, ip: "10.0.0.${H3_INDEX:-100}/8",     route: "default via 10.0.0.1"}
 
 services:
   r0:
@@ -24,9 +24,9 @@ services:
     command: "sleep 864000"
     x-network:
       links:
-        - {domain: s1, service: r0, interface: eth-s1, ip: "192.168.1.1/24"}
-        - {domain: s2, service: r0, interface: eth-s2, ip: "172.16.0.1/12"}
-        - {domain: s3, service: r0, interface: eth-s3, ip: "10.0.0.1/8"}
+        - {bridge: s1, service: r0, dev: eth-s1, ip: "192.168.1.1/24"}
+        - {bridge: s2, service: r0, dev: eth-s2, ip: "172.16.0.1/12"}
+        - {bridge: s3, service: r0, dev: eth-s3, ip: "10.0.0.1/8"}
 
   h1: {image: alpine, network_mode: none, command: "sleep 864000"}
   h2: {image: alpine, network_mode: none, command: "sleep 864000"}
