--- a/examples/test1-compose.yaml
+++ b/examples/test1-compose.yaml
@@ -11,12 +11,6 @@
 
 version: "2.4"
 
-x-network:
-  links:
-    - {bridge: s1, service: h1, ip: "192.168.1.${H1_INDEX:-100}/24", route: "default via 192.168.1.1"}
-    - {bridge: s2, service: h2, ip: "172.16.0.${H2_INDEX:-100}/12",  route: "default via 172.16.0.1"}
-    - {bridge: s3, service: h3, ip: "10.0.0.${H3_INDEX:-100}/8",     route: "default via 10.0.0.1"}
-
 services:
   r0:
     image: alpine
@@ -24,13 +18,33 @@ services:
     command: "sleep 864000"
     x-network:
       links:
-        - {bridge: s1, service: r0, dev: eth-s1, ip: "192.168.1.1/24"}
-        - {bridge: s2, service: r0, dev: eth-s2, ip: "172.16.0.1/12"}
-        - {bridge: s3, service: r0, dev: eth-s3, ip: "10.0.0.1/8"}
+        - {bridge: s1, dev: eth-s1, ip: "192.168.1.1/24"}
+        - {bridge: s2, dev: eth-s2, ip: "172.16.0.1/12"}
+        - {bridge: s3, dev: eth-s3, ip: "10.0.0.1/8"}
 
-  h1: {image: alpine, network_mode: none, command: "sleep 864000"}
-  h2: {image: alpine, network_mode: none, command: "sleep 864000"}
-  h3: {image: alpine, network_mode: none, command: "sleep 864000"}
+  h1:
+    image: alpine
+    network_mode: none
+    command: "sleep 864000"
+    x-network:
+      links:
+        - {bridge: s1, ip: "192.168.1.100/24", route: "default via 192.168.1.1"}
+
+  h2:
+    image: alpine
+    network_mode: none
+    command: "sleep 864000"
+    x-network:
+      links:
+        - {bridge: s2, ip: "172.16.0.100/12",  route: "default via 172.16.0.1"}
+
+  h3:
+    image: alpine
+    network_mode: none
+    command: "sleep 864000"
+    x-network:
+      links:
+        - {bridge: s3, ip: "10.0.0.100/8",     route: "default via 10.0.0.1"}
 
   network:
     build: {context: ../}
