--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "conlink",
   "dependencies": {
+    "ajv": "^8.12.0",
     "dockerode": "^3.3.4",
     "nbb": "^1.2.178",
     "neodoc": "^2.0.2",
