Change net2dot to use ts-graphviz module.
Also, net2dot now reads the output from `conlink --show-config` on stdin
and no longer needs to import any conlink utils/functions.

Using ts-graphviz allows us to do a more structured generation of the
dot output rather than the previous templated string model.

--- a/examples/net2dot.yaml
+++ b/examples/net2dot.yaml
@@ -15,7 +15,7 @@ links:
   - {type: macvlan, service: nodeH, dev: mv0, outer-dev: eni1, mode: bridge}
 
 tunnels:
-  - {type: geneve, bridge: s1, vni: 1001, remote: "${REMOTE1}"}
-  - {type: geneve, bridge: s3, vni: 1002, remote: "${REMOTE2}"}
+  - {type: geneve, bridge: s1, vni: 1001, remote: "10.0.0.1"}
+  - {type: geneve, bridge: s3, vni: 1002, remote: "10.0.0.2"}
 
 
