--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "conlink",
   "version": "2.0.0",
+  "description": "conlink -  Declarative Low-Level Networking for Containers",
+  "repository": "https://github.com/LonoCloud/conlink",
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "ajv": "^8.12.0",
     "dockerode": "^3.3.4",
