--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "conlink",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "conlink -  Declarative Low-Level Networking for Containers",
   "repository": "https://github.com/LonoCloud/conlink",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
+    "@lonocloud/resolve-deps": "^0.0.2",
     "ajv": "^8.12.0",
     "dockerode": "^3.3.4",
     "nbb": "^1.2.179",
