GHA: add docker-compose tests.
The push workflow does checkout, installs npm modules (resolve-deps),
does a build of conlink (using test1 compose), and then invokes
run-tests.sh

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,5 +13,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: stub step
-        run: "echo stub stub"
+      - name: npm install
+        run: npm install
+
+      - name: compose build of conlink
+        run: docker-compose -f examples/test1-compose.yaml build
+
+      - name: "./run-tests.sh"
+        timeout-minutes: 5
+        run: time ./run-tests.sh
