Add run-tests.sh: covers tests 1, 2, 4, and 7

--- a/examples/test4-multiple/modes/web/compose.yaml
+++ b/examples/test4-multiple/modes/web/compose.yaml
@@ -1,5 +1,10 @@
 version: "2.4"
 
+services:
+  r0:
+    volumes:
+      - ./scripts:/scripts
+
 x-network:
   commands:
     - {service: r0, command: "python3 -m http.server 80"}
