Add patch bridge mode (using tc filter action).
Add a new "patch" mode (e.g. bump-in-the-wire) that uses the kernel
module "act_mirred" and a tc ingress filter action to redirect traffic
from one interface to another interface and vice versa. One key
limitation of this "bridge" action is that only two links can be
connected. So while the this mode supports restarts/reconnecting of
containers it does not support arbitrary scalability like the ovs and
linux bridge modes.

Add a mirred node to the test9-compose.yaml example and document how to
use/test it in the README.

--- a/examples/test9-compose.yaml
+++ b/examples/test9-compose.yaml
@@ -26,6 +26,7 @@ services:
   Nauto:   { <<: *node }
   Nlinux:  { <<: *node }
   Novs:    { <<: *node }
+  Npatch:  { <<: *node }
 
 x-network:
   links:
@@ -33,8 +34,10 @@ x-network:
     - {bridge: s2, service: Nauto,    ip: 10.0.2.1/24}
     - {bridge: s3, service: Nlinux,   ip: 10.0.3.1/24}
     - {bridge: s4, service: Novs,     ip: 10.0.4.1/24}
+    - {bridge: s5, service: Npatch,   ip: 10.0.5.1/24}
   bridges:
     - {bridge: s2, mode: auto}
     - {bridge: s3, mode: linux}
     - {bridge: s4, mode: ovs}
+    - {bridge: s5, mode: patch}
 
