--- a/examples/test9-compose.yaml
+++ b/examples/test9-compose.yaml
@@ -15,7 +15,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker:/var/lib/docker
       - ./:/test
-    command: /app/build/conlink.js --default-bridge-mode linux --compose-file /test/test9-compose.yaml
+    command: /app/build/conlink.js -v --default-bridge-mode linux --compose-file /test/test9-compose.yaml
 
   Ndefault: &node
     image: alpine
@@ -25,7 +25,6 @@ services:
 
   Nauto:   { <<: *node }
   Nlinux:  { <<: *node }
-  Novs:    { <<: *node }
   Npatch:  { <<: *node }
 
 x-network:
@@ -33,11 +32,9 @@ x-network:
     - {bridge: s1, service: Ndefault, ip: 10.0.1.1/24}
     - {bridge: s2, service: Nauto,    ip: 10.0.2.1/24}
     - {bridge: s3, service: Nlinux,   ip: 10.0.3.1/24}
-    - {bridge: s4, service: Novs,     ip: 10.0.4.1/24}
     - {bridge: s5, service: Npatch,   ip: 10.0.5.1/24}
   bridges:
     - {bridge: s2, mode: auto}
     - {bridge: s3, mode: linux}
-    - {bridge: s4, mode: ovs}
     - {bridge: s5, mode: patch}
 
