run-tests.sh: determine compose command.
Newer compose is a docker builtin command. Try `docker compose`,
then try `docker-compose`, and if neither is found then exit with an
error.

Currently, the Github Actions "ubuntu-latest" host target sometimes has
the newer form and sometimes does not.

In the workflow, always use `docker compose`.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: compose build of conlink
-        run: docker-compose -f examples/test1-compose.yaml build
+        run: docker compose -f examples/test1-compose.yaml build
 
       - name: "./run-tests.sh"
         timeout-minutes: 5
