Add --default-mtu. Change default to 65535 (from 9000).
MTU of 9000 was an arbitrary jumbo frame size. Setting the default to
the max possible is probably the least likely to cause surprises
(especially with patch connections).

Add testing of --default-mtu to the test7 example.

Co-authored-by: Aaron Brooks <abrooks@equinix.com>

--- a/examples/test7-compose.yaml
+++ b/examples/test7-compose.yaml
@@ -15,7 +15,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker:/var/lib/docker
       - ./:/test
-    command: /app/build/conlink.js --compose-file /test/test7-compose.yaml
+    command: /app/build/conlink.js --default-mtu 5111 --compose-file /test/test7-compose.yaml
 
   node:
     image: alpine
@@ -29,3 +29,6 @@ services:
           mac: 00:0a:0b:0c:0d:01
           mtu: 4111
           netem: "delay 40ms rate 10mbit"
+        - bridge: s2
+          ip: 100.0.1.1/16
+          dev: eth1
