Support string or array for forward/route attributes.
Previously we only supported a single route and the forward definition
was required to be an array. Add support for specifying multiple
routes (as an array of strings) and make forward work the same way so
that a single forward definition can be specified as a plain string.

This requires modifying the link-add.sh script to support the --route
option being specified multiple times on the command line. The schema is
adjusted to allow string or array of strings in the forward and route
attributes.

Update the test10 example to add a router container and the node
containers to use multiple routes. Add routing tests to the test10
section in run-tests.sh.

--- a/examples/test10-compose.yaml
+++ b/examples/test10-compose.yaml
@@ -7,7 +7,8 @@ services:
     command: "python3 -m http.server -d /var 80"
     x-network:
       links:
-        - {bridge: s2, ip: "10.0.1.1/24", route: "default",
+        - {bridge: s1, ip: "10.1.0.1/24",
+           route: ["default", "10.0.0.0/8 via 10.1.0.100"],
            forward: ["1080:80/tcp", "1180:80/tcp"]}
 
   node2:
@@ -17,8 +18,18 @@ services:
     command: "python3 -m http.server -d /usr 80"
     x-network:
       links:
-        - {bridge: s1, ip: "10.0.2.1/24", route: "default",
-           forward: ["80:80/tcp"]}
+        - {bridge: s2, ip: "10.2.0.1/24",
+           route: ["default", "10.0.0.0/8 via 10.2.0.100"],
+           forward: "80:80/tcp"}
+
+  router:
+    image: python:3-alpine
+    network_mode: none
+    command: sleep Infinity
+    x-network:
+      links:
+        - {bridge: s1, ip: "10.1.0.100/24", dev: es1}
+        - {bridge: s2, ip: "10.2.0.100/24", dev: es2}
 
   network:
     build: {context: ../}
