--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "yaml": "^2.2.1"
   },
   "devDependencies": {
+    "@lonocloud/dctest": "0.1.1",
     "shadow-cljs": "^2.25.7",
     "source-map-support": "^0.5.21"
   }
