test9: test link recreate on container restart.
- Define node1 and node2 instead of using 'scale: 2'. This avoids
  an docker-compose behavior where scaling down occasionally stops node
  index 1 instead of node index 2 which breaks assumptions in the test.
- Stop and restart node2 and then test pings again to make sure that
  link recreation happens correctly.

--- a/examples/test9-compose.yaml
+++ b/examples/test9-compose.yaml
@@ -19,14 +19,19 @@ services:
       - BRIDGE_MODE
     command: /app/build/conlink.js --default-bridge-mode linux --compose-file /test/test9-compose.yaml
 
-  node:
+  node1:
     image: alpine
     network_mode: none
-    scale: 2
+    command: sleep Infinity
+
+  node2:
+    image: alpine
+    network_mode: none
     command: sleep Infinity
 
 x-network:
   links:
-    - {bridge: s1, service: node, ip: 10.0.1.1/24}
+    - {bridge: s1, service: node1, ip: 10.0.1.1/24}
+    - {bridge: s1, service: node2, ip: 10.0.1.2/24}
   bridges:
     - {bridge: s1, mode: "${BRIDGE_MODE:-auto}"}
