--- a/test/test9.yaml
+++ b/test/test9.yaml
@@ -19,13 +19,21 @@ tests:
           echo "waiting for conlink startup"
           ${DC} logs network | grep "All links connected"
         repeat: { retries: 30, interval: '1s' }
-      - exec: node
+      - exec: node1
         run: ip addr | grep "10\.0\.1\.1"
         repeat: { retries: 10, interval: '2s' }
 
       # Check for round-trip ping connectivity
-      - {exec: node, index: 1, run: ping -c1 -w2 10.0.1.2}
-      - {exec: node, index: 2, run: ping -c1 -w2 10.0.1.1}
+      - {exec: node1, run: ping -c1 -w2 10.0.1.2}
+      - {exec: node2, run: ping -c1 -w2 10.0.1.1}
+
+      # Restart second node and check again
+      - exec: :host
+        run: |
+          echo "Restart the second node"
+          ${DC} up -d -t1 --scale node2=0 && ${DC} up -d --scale node2=1
+      - {exec: node1, run: ping -c1 -w2 10.0.1.2}
+      - {exec: node2, run: ping -c1 -w2 10.0.1.1}
 
       - exec: :host
         run: ${DC} down --remove-orphans --volumes -t1
@@ -44,13 +52,21 @@ tests:
           echo "waiting for conlink startup"
           ${DC} logs network | grep "All links connected"
         repeat: { retries: 30, interval: '1s' }
-      - exec: node
+      - exec: node1
         run: ip addr | grep "10\.0\.1\.1"
         repeat: { retries: 10, interval: '2s' }
 
       # Check for round-trip ping connectivity
-      - {exec: node, index: 1, run: ping -c1 -w2 10.0.1.2}
-      - {exec: node, index: 2, run: ping -c1 -w2 10.0.1.1}
+      - {exec: node1, run: ping -c1 -w2 10.0.1.2}
+      - {exec: node2, run: ping -c1 -w2 10.0.1.1}
+
+      # Restart second node and check again
+      - exec: :host
+        run: |
+          echo "Restart the second node"
+          ${DC} up -d -t1 --scale node2=0 && ${DC} up -d --scale node2=1
+      - {exec: node1, run: ping -c1 -w2 10.0.1.2}
+      - {exec: node2, run: ping -c1 -w2 10.0.1.1}
 
       - exec: :host
         run: ${DC} down --remove-orphans --volumes -t1
@@ -69,15 +85,23 @@ tests:
           echo "waiting for conlink startup"
           ${DC} logs network | grep "All links connected"
         repeat: { retries: 30, interval: '1s' }
-      - exec: node
+      - exec: node1
         run: ip addr | grep "10\.0\.1\.1"
         repeat: { retries: 10, interval: '2s' }
 
       # Ensure ingest filter rules exist
-      - {exec: network, run: 'tc filter show dev node_1-eth0 parent ffff: | grep "action order 1: mirred"'}
+      - {exec: network, run: 'tc filter show dev node1_1-eth0 parent ffff: | grep "action order 1: mirred"'}
       # Check for round-trip ping connectivity
-      - {exec: node, index: 1, run: ping -c1 -w2 10.0.1.2}
-      - {exec: node, index: 2, run: ping -c1 -w2 10.0.1.1}
+      - {exec: node1, run: ping -c1 -w2 10.0.1.2}
+      - {exec: node2, run: ping -c1 -w2 10.0.1.1}
+
+      # Restart second node and check again
+      - exec: :host
+        run: |
+          echo "Restart the second node"
+          ${DC} up -d -t1 --scale node2=0 && ${DC} up -d --scale node2=1
+      - {exec: node1, run: ping -c1 -w2 10.0.1.2}
+      - {exec: node2, run: ping -c1 -w2 10.0.1.1}
 
       - exec: :host
         run: ${DC} down --remove-orphans --volumes -t1
