--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   },
   "devDependencies": {
     "@lonocloud/dctest": "0.1.1",
+    "docsify-cli": "^4.4.4",
     "shadow-cljs": "^2.25.7",
     "source-map-support": "^0.5.21"
+  },
+  "scripts": {
+    "serve-docs": "docsify serve ./docs"
   }
 }
