rust/src/copy: convert from structopt to clap-4.5
Newer versions of clap have structopt derivation features built-in and
structopt itself has been deprecated.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 nix = "0.23"
 which = "4.4"
 anyhow = "1.0"
-structopt = "0.3"
+clap = { version = "4.5", features = ["derive"] }
 walkdir = "2.3"
 regex = "1.5"
 
