Add dedicated (without conlink) utils test.
The compose file at `examples/test11-compose.yaml` shows using wait and
copy together with conlink (along with the dctest definition for it at
`test/test11.yaml`). Rename the `test/utils.yaml` file to
`test/utils-compose.yaml` and add a dctest test definition for it at
`test/test-utils.yaml`. This test just waits for the compose instance to
exit which is how the `test/utils-compose.yaml` test completes
successfully (different goal than the persistent examples in
`examples`).

--- a/examples/test11-compose.yaml
+++ b/examples/test11-compose.yaml
@@ -19,10 +19,11 @@ x-service: &service-base
 services:
   extract-utils:
     build: {context: ../, dockerfile: Dockerfile}
+    user: ${USER_ID:-0}:${GROUP_ID:-0}
     network_mode: none
     volumes:
       - ../utils:/conlink_utils
-    command: cp /utils/wait /utils/copy /utils/echo /conlink_utils/
+    command: cp /utils/wait /utils/wait.sh /utils/copy /utils/copy.sh /utils/echo /conlink_utils/
 
   webserver:
     <<: *service-base
